--- a/NLW/package.json
+++ b/NLW/package.json
@@ -6,7 +6,8 @@
   "author": "Gabriel B",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nunjucks": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
